# gtfreader

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
gtfread/: _parser.pyx  readers.py
gtfreader/: __init__.py  _parser.pyx  readers.py
src/gtfread/: __init__.py  _fallback.py  _parser.pyx
tests/: test_parser.py  test_readers.py
