[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gtfread"
version = "0.1.0"
description = "Fast Cython-backed parsing for GTF attribute columns."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Endre Bakken Stovner" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [
    {name = "gtfread._parser", sources = ["src/gtfread/_parser.pyx"]},
]

[tool.setuptools.packages.find]
where = ["src"]
