[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gtfread"
version = "0.1.0"
description = "Fast Cython-backed parsing for GTF attribute columns."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Endre Bakken Stovner" },
]
dependencies = [
    "pandas>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
ext-modules = [
    {name = "gtfread._parser", sources = ["gtfread/_parser.pyx"]},
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gtfread*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_* *-manylinux_i686"
test-command = "pytest -q {project}/tests"
test-requires = ["pytest"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
