[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "gtfreader"
version = "0.2.0"
description = "Fast Cython-backed parsing for GTF attribute columns."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Endre Bakken Stovner" },
]
dependencies = [
    "pandas>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
ext-modules = [
    {name = "gtfreader._parser", sources = ["gtfreader/_parser.pyx"]},
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gtfreader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp312-* cp313-*"
skip = "pp* *-musllinux_* *-manylinux_i686"
test-command = "pytest -q {project}/tests"
test-requires = ["pytest"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
